# video-analytics

./: .gitignore  CLAUDE.md  COORDINATION.md  README.md  performance-and-productization-plan.md  plan.md  pyproject.toml  qa-and-traceability-plan.md  solution_code_hike.md  traceability-plan.md  video-analytics-model-analysis.md  video-analytics-nvidia-comparison.md  video-analytics-solution-architecture.md  web-frontend-plan.md  write-a-plan.md
config/: roles.yaml
config/profiles/: dgx-spark.yaml
perf/: baseline-stub.json  decode-once.json  sqlite-hardening.json  vector-cache.json
run-claude/config/: roles.yaml
run-claude/config/profiles/: dgx-spark.yaml
run-siglip/config/: roles.yaml
run-siglip/config/profiles/: dgx-spark.yaml
scripts/: spike_intent_embeddings.py
src/va/: __init__.py  cli.py  configuration.py  registry.py
src/va/adapters/action_recognizer/: motion_inproc.py  xclip_inproc.py
src/va/adapters/object_detector/: color_inproc.py  yolo_world_inproc.py
src/va/adapters/object_tracker/: bytetrack_inproc.py  iou_inproc.py
src/va/adapters/ocr/: rapidocr_inproc.py  sidecar_inproc.py
src/va/adapters/reasoner/: claude_api_inproc.py  claude_cli_inproc.py  prompts.py  qwen_inproc.py  rule_inproc.py
src/va/adapters/reranker/: cross_encoder_inproc.py  wordoverlap_inproc.py
src/va/adapters/scene_detector/: histogram_inproc.py  pyscenedetect_inproc.py
src/va/adapters/speaker_diarizer/: pyannote_inproc.py  sidecar_inproc.py
src/va/adapters/speech_to_text/: sidecar_inproc.py  whisper_inproc.py
src/va/adapters/text_embedder/: hash_inproc.py  (+1 more)
src/va/contracts/: action.py  detection.py  diarization.py  embedding.py  evidence.py  ocr.py  query_plan.py  segment.py  track.py  transcript.py  video.py
src/va/media/: audio.py  frames.py  synth.py
src/va/pipeline/: actions.py  ask.py  bench.py  caption.py  deep_scan.py  diarize.py  evidence.py  ingest.py  manage.py  migrate.py  objects.py  ocr.py  paths.py  query.py  retrieval.py  text_index.py  text_search.py  trace_links.py  transcript.py  verify.py
src/va/roles/: action_recognizer.py  diarizer.py  object_detector.py  object_tracker.py  ocr.py  reasoner.py  reranker.py  scene_detector.py  speech_to_text.py  text_embedder.py  visual_embedder.py  vlm_captioner.py  vlm_verifier.py
src/va/runtime/: device.py  manager.py  trace.py
src/va/sources/: base.py  fixtures.py  local.py  youtube.py
src/va/web/: __init__.py  app.py  jobs.py
tests/: test_actions_e2e.py  test_ask_e2e.py  test_bench.py  test_caption_e2e.py  test_captioner.py  test_catalog.py  test_config.py  test_contracts.py  test_contracts_runtime.py  test_count_e2e.py  test_deep_scan.py  test_diarize_e2e.py  test_e2e.py  test_embedder.py  test_evidence_e2e.py  test_golden_ask.py  test_golden_queries.py  test_layout.py  test_media.py  test_object_detector.py  test_objects_e2e.py  test_ocr_e2e.py  test_reasoner_rule.py  test_reranker.py  test_retrieval_e2e.py  test_runtime.py  test_scene_detector.py  test_segments.py  test_sources.py  test_text_embedder.py  test_text_search_e2e.py  test_trace.py  test_trace_e2e.py  test_trace_ingest.py  test_trace_link.py  test_tracker.py  test_transcript.py  test_transcript_e2e.py  test_vector_store.py  test_vlm_verifier.py  (+1 more)
tests/fixtures/: sources.yaml
tests/golden_queries/: 7N68NjL9cMA.md  7N68NjL9cMA.yaml  GXPRSFL0UUA.md  GXPRSFL0UUA.yaml  README.md  birdfeeder_0413_1405.md  birdfeeder_0413_1405.yaml  eiLeBJUf1iE.md  eiLeBJUf1iE.yaml  xDerjsxFkb4.md  xDerjsxFkb4.yaml
(+22 files in other folders)
